# esp-idf-led-strip-animations

./: CMakeLists.txt  idf_component.yml
example/: CMakeLists.txt  main.c
include/: led_animations.h  led_gpio.h
src/: led_animations.c  led_gpio.c
